y.output

state 0
	$accept: .main $end 

	EN_TOK  shift 5
	.  error

	ast  goto 2
	entities  goto 3
	ent  goto 4
	main  goto 1

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  ast.    (1)

	.  reduce 1 (src line 90)


state 3
	ast:  entities.    (2)
	entities:  entities.ent 

	EN_TOK  shift 5
	.  reduce 2 (src line 95)

	ent  goto 6

state 4
	entities:  ent.    (3)

	.  reduce 3 (src line 100)


state 5
	ent:  EN_TOK.IDENT LS_TOK fields RS_TOK ARROW_TOK actions 

	IDENT  shift 7
	.  error


state 6
	entities:  entities ent.    (4)

	.  reduce 4 (src line 105)


state 7
	ent:  EN_TOK IDENT.LS_TOK fields RS_TOK ARROW_TOK actions 

	LS_TOK  shift 8
	.  error


state 8
	ent:  EN_TOK IDENT LS_TOK.fields RS_TOK ARROW_TOK actions 

	IDENT  shift 11
	.  error

	fields  goto 9
	field  goto 10

state 9
	ent:  EN_TOK IDENT LS_TOK fields.RS_TOK ARROW_TOK actions 
	fields:  fields.field 

	IDENT  shift 11
	RS_TOK  shift 12
	.  error

	field  goto 13

state 10
	fields:  field.    (6)

	.  reduce 6 (src line 119)


state 11
	field:  IDENT.type 

	INT_T  shift 15
	INT8_T  shift 16
	INT16_T  shift 17
	INT32_T  shift 18
	INT64_T  shift 19
	UINT_T  shift 20
	UINT8_T  shift 21
	UINT16_T  shift 22
	UINT32_T  shift 23
	UINT64_T  shift 24
	BYTE_T  shift 25
	RUNE_T  shift 26
	FLOAT32_T  shift 27
	FLOAT64_T  shift 28
	BOOL_T  shift 29
	STRING_T  shift 30
	.  error

	type  goto 14

state 12
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK.ARROW_TOK actions 

	ARROW_TOK  shift 31
	.  error


state 13
	fields:  fields field.    (7)

	.  reduce 7 (src line 124)


state 14
	field:  IDENT type.    (8)

	.  reduce 8 (src line 129)


state 15
	type:  INT_T.    (16)

	.  reduce 16 (src line 167)


state 16
	type:  INT8_T.    (17)

	.  reduce 17 (src line 172)


state 17
	type:  INT16_T.    (18)

	.  reduce 18 (src line 176)


state 18
	type:  INT32_T.    (19)

	.  reduce 19 (src line 180)


state 19
	type:  INT64_T.    (20)

	.  reduce 20 (src line 184)


state 20
	type:  UINT_T.    (21)

	.  reduce 21 (src line 188)


state 21
	type:  UINT8_T.    (22)

	.  reduce 22 (src line 192)


state 22
	type:  UINT16_T.    (23)

	.  reduce 23 (src line 196)


state 23
	type:  UINT32_T.    (24)

	.  reduce 24 (src line 200)


state 24
	type:  UINT64_T.    (25)

	.  reduce 25 (src line 204)


state 25
	type:  BYTE_T.    (26)

	.  reduce 26 (src line 208)


state 26
	type:  RUNE_T.    (27)

	.  reduce 27 (src line 212)


state 27
	type:  FLOAT32_T.    (28)

	.  reduce 28 (src line 216)


state 28
	type:  FLOAT64_T.    (29)

	.  reduce 29 (src line 220)


state 29
	type:  BOOL_T.    (30)

	.  reduce 30 (src line 224)


state 30
	type:  STRING_T.    (31)

	.  reduce 31 (src line 228)


state 31
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK ARROW_TOK.actions 

	CREATE_TOK  shift 34
	READ_TOK  shift 35
	UPDATE_TOK  shift 36
	DELETE_TOK  shift 37
	LIST_TOK  shift 38
	.  error

	actions  goto 32
	action  goto 33

state 32
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK ARROW_TOK actions.    (5)
	actions:  actions.COMMA_TOK action 

	COMMA_TOK  shift 39
	.  reduce 5 (src line 110)


state 33
	actions:  action.    (9)

	.  reduce 9 (src line 134)


state 34
	action:  CREATE_TOK.    (11)

	.  reduce 11 (src line 144)


state 35
	action:  READ_TOK.    (12)

	.  reduce 12 (src line 149)


state 36
	action:  UPDATE_TOK.    (13)

	.  reduce 13 (src line 153)


state 37
	action:  DELETE_TOK.    (14)

	.  reduce 14 (src line 157)


state 38
	action:  LIST_TOK.    (15)

	.  reduce 15 (src line 161)


state 39
	actions:  actions COMMA_TOK.action 

	CREATE_TOK  shift 34
	READ_TOK  shift 35
	UPDATE_TOK  shift 36
	DELETE_TOK  shift 37
	LIST_TOK  shift 38
	.  error

	action  goto 40

state 40
	actions:  actions COMMA_TOK action.    (10)

	.  reduce 10 (src line 139)


30 terminals, 10 nonterminals
32 grammar rules, 41/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 12/240000
0 extra closures
35 shift entries, 1 exceptions
12 goto entries
0 entries saved by goto default
Optimizer space used: output 57/240000
57 table entries, 16 zero
maximum spread: 30, maximum offset: 39
